fix code scrollbar

--- a/src/less/deep-ui.less
+++ b/src/less/deep-ui.less
@@ -92,6 +92,9 @@
         box-shadow: inset 0 0 3px rgb(0, 0, 0, 0.5);
         background-color: #413838;
     }
+    &::-webkit-scrollbar-corner {
+        background-color: #413838;
+    }
 }
 
 .deep-icon {
