--- a/src/less/page/chat.less
+++ b/src/less/page/chat.less
@@ -78,6 +78,9 @@
     .CodeMirror-vscrollbar {
         .deep-scroll;
     }
+    .CodeMirror-scrollbar-filler {
+        display: none !important;
+    }
     .tool-bar {
         @height: 30px;
         height: @height;
